# Naive-Bayes-Image-Classifier

./: CMakeLists.txt  README.md
data/: sample_test_images  sample_test_labels  sample_training_images  sample_training_labels
src/: Image.cpp  Image.h  ImageData.cpp  ImageData.h  NaiveBayesClassifier.cpp  NaiveBayesClassifier.h  main.cpp  project_outline.txt
test/: test.cpp
